--- a/Frontend_intro_to_DOM_temp_converter/index.html
+++ b/Frontend_intro_to_DOM_temp_converter/index.html
@@ -13,8 +13,8 @@
 
                 <form id="form1">
                     <input id="numb" type="number"><br>
-                    <input id="clickedFahrenheit" type="radio" name="F°">
-                    <input id="clickedCelsius" type="radio" name="C°"><br>
+                    <input id="clickedFahrenheit" type="radio" name="F°">F°
+                    <input id="clickedCelsius" type="radio" name="C°">C°<br>
                     <input type="submit" id="submit" onclick="clickedSubmit()">
                     <button type="button" onclick="clear">Clear</button>
                     <p id="displayNum" class="DisplayH3"></p>
