Add: Frontend_callback_excercises

--- a/Frontend_intro_to_DOM_temp_converter/index.html
+++ b/Frontend_intro_to_DOM_temp_converter/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
     </head>
 
-    <body>
+    <body id="">
         <div class="MainDiv" id="MainDiv">
             <h2>temp Converter</h2>
             <div id="converter">
@@ -16,8 +16,8 @@
                     <input id="clickedFahrenheit" type="radio" name="F°">F°
                     <input id="clickedCelsius" type="radio" name="C°">C°<br>
                     <input type="submit" id="submit" onclick="clickedSubmit()">
-                    <button type="button" onclick="clear">Clear</button>
-                    <p id="displayNum" class="DisplayH3"></p>
+                    <input type="button" >Clear</input>
+                    <p id="displayNum" class="DisplayH3">0</p>
                 </form> 
             </div>
         </div>
