Added js to: 1 & 2

--- a/Frontend_callback_exercises/excercise1/index.html
+++ b/Frontend_callback_exercises/excercise1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="text/javascript">
+    <script src="javaScript.js" type="text/javascript">
         //Using the setTimemout function. After 15 seconds
         //use the alert function to ouput "Hello Word"
     </script>
